WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/Asset_Type__c.object-meta.xml
<CustomObject>
    <label>Asset Type</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>