WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/Account_Asset__c.field-meta.xml
<CustomField>
    <fullName>Account_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Asset</label>
    <referenceTo>Account_Asset__c</referenceTo>
    <relationshipName>Additional_Business_Types</relationshipName>
    <type>Lookup</type>
</CustomField>