WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/AP_Direct_Notify_Me__c.field-meta.xml
<CustomField>
    <fullName>AP_Direct_Notify_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AP Direct &quot;Notify Me&quot;</label>
    <type>Checkbox</type>
</CustomField>