WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/AP_System__c.field-meta.xml
<CustomField>
    <fullName>AP_System__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AP System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>