WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>