WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/Contract_Spend__c.field-meta.xml
<CustomField>
    <fullName>Contract_Spend__c</fullName>
    <label>Contract Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>