WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/Fuel_Desk__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Desk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuel Desk</label>
    <type>Checkbox</type>
</CustomField>