WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Unleaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>