WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/Gallons_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Gallons_per_Month__c</fullName>
    <label>Gallons per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>