WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/Liability_Source__c.field-meta.xml
<CustomField>
    <fullName>Liability_Source__c</fullName>
    <label>Liability Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Liability</fullName>
            </value>
            <value>
                <fullName>Individual Liability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>