WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Asset</relationshipLabel>
    <relationshipName>Additional_Business_Types</relationshipName>
    <type>Lookup</type>
</CustomField>