WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/Sales_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Sales_per_Month__c</fullName>
    <label>Sales per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>