WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>