WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/Total_Cards__c.field-meta.xml
<CustomField>
    <fullName>Total_Cards__c</fullName>
    <label>Total Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>