WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/Total_Opportunity_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity_Units__c</fullName>
    <label>Total Opportunity Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>