WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/Wex_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Wex_Authorized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wex Authorized</label>
    <type>Checkbox</type>
</CustomField>