WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/fields/WEXPay_Included__c.field-meta.xml
<CustomField>
    <fullName>WEXPay_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WEXPay Included</label>
    <type>Checkbox</type>
</CustomField>