WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/recordTypes/Affinity.recordType-meta.xml
<RecordType>
    <fullName>Affinity</fullName>
    <active>true</active>
    <description>Use this Record Type for Affinity.</description>
    <label>CM - Affinity</label>
</RecordType>