WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/recordTypes/AP_Direct.recordType-meta.xml
<RecordType>
    <fullName>AP_Direct</fullName>
    <active>true</active>
    <description>Use this Record Type for AP Direct.</description>
    <label>MasterCard - AP Direct</label>
</RecordType>