WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/recordTypes/Distributor.recordType-meta.xml
<RecordType>
    <fullName>Distributor</fullName>
    <active>true</active>
    <description>Use this Record Type for Distributors.</description>
    <label>CM - Distributor</label>
</RecordType>