WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/recordTypes/Mobile_Fueling.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Fueling</fullName>
    <active>true</active>
    <description>Use this Record Type for Mobile Fueling.</description>
    <label>Fuel Card - Mobile Fueling</label>
</RecordType>