WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/recordTypes/OPIS.recordType-meta.xml
<RecordType>
    <fullName>OPIS</fullName>
    <active>true</active>
    <description>Use this Record Type for OPIS.</description>
    <label>Fuel Card - OPIS</label>
</RecordType>