WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/recordTypes/Price_Risk_Management.recordType-meta.xml
<RecordType>
    <fullName>Price_Risk_Management</fullName>
    <active>true</active>
    <description>Use this Record Type for Price Risk Management.</description>
    <label>Fuel Card - Price Risk Management</label>
</RecordType>