WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/recordTypes/Private_Label.recordType-meta.xml
<RecordType>
    <fullName>Private_Label</fullName>
    <active>true</active>
    <description>Use this Record Type for Private Labels.</description>
    <label>CM - Private Label</label>
</RecordType>