WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/recordTypes/Private_Site_Only.recordType-meta.xml
<RecordType>
    <fullName>Private_Site_Only</fullName>
    <active>true</active>
    <description>Use this Record Type for Private Site Only.</description>
    <label>Fuel Card - Private Site Only</label>
</RecordType>