WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/recordTypes/Purchase_Card.recordType-meta.xml
<RecordType>
    <fullName>Purchase_Card</fullName>
    <active>true</active>
    <description>Use this Record Type for Purchase Card.</description>
    <label>MasterCard - Purchase Card</label>
</RecordType>