WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/recordTypes/Purchase_Log.recordType-meta.xml
<RecordType>
    <fullName>Purchase_Log</fullName>
    <active>true</active>
    <description>Use this Record Type for Purchase Log.</description>
    <label>MasterCard - Purchase Log</label>
</RecordType>