WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/recordTypes/T_E_Card.recordType-meta.xml
<RecordType>
    <fullName>T_E_Card</fullName>
    <active>true</active>
    <description>Use this Record Type for T&amp;E Card.</description>
    <label>MasterCard - T&amp;E Card</label>
</RecordType>