WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/recordTypes/Telapoint.recordType-meta.xml
<RecordType>
    <fullName>Telapoint</fullName>
    <active>true</active>
    <description>Use this Record Type for Telapoint.</description>
    <label>Fuel Card - Telapoint</label>
</RecordType>