WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/recordTypes/Telematics.recordType-meta.xml
<RecordType>
    <fullName>Telematics</fullName>
    <active>true</active>
    <description>Use this Record Type for Telematics.</description>
    <label>Fuel Card - Telematics</label>
</RecordType>