WexGit/Wex_DX/force-app/main/default/objects/Asset_Type__c/recordTypes/WESN.recordType-meta.xml
<RecordType>
    <fullName>WESN</fullName>
    <active>true</active>
    <description>Use this Record Type for WESN.</description>
    <label>Fuel Card - WESN</label>
</RecordType>